# cookiecutter-python

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  README.md  pyproject.toml
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.project_slug}}.py
